--- a/Modelbouwer/View/BrandManagement.xaml
+++ b/Modelbouwer/View/BrandManagement.xaml
@@ -4,8 +4,10 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:Modelbouwer.View"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:BrandViewModel}"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
 	Title="BrandManagement"
+	d:DataContext="{d:DesignInstance Type=viewmodels:BrandViewModel}"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
@@ -84,9 +86,11 @@
 		<!--#region Datagrid-->
 		<DataGrid
 			x:Name="BrandDataGrid"
-			Grid.Row="4" CanUserAddRows="False" CanUserDeleteRows="False"
+			Grid.Row="4"
 			Margin="10,5,10,5"
 			AutoGenerateColumns="False"
+			CanUserAddRows="False"
+			CanUserDeleteRows="False"
 			ItemsSource="{Binding Brand, Mode=TwoWay}"
 			SelectedItem="{Binding SelectedBrand, Mode=TwoWay}"
 			SelectionChanged="SelectionChanged">
@@ -105,18 +109,18 @@
 
 		<!--#region Brand export Status bar-->
 		<DockPanel
-				Grid.Row="5"
-				Height="30"
-				Margin="10,0,10,0"
-				VerticalAlignment="Center"
-				Background="LightGray">
+			Grid.Row="5"
+			Height="30"
+			Margin="10,0,10,0"
+			VerticalAlignment="Center"
+			Background="LightGray">
 			<Grid>
 				<StackPanel Orientation="Horizontal">
 					<TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Import.Statusline.Text}" />
 					<TextBlock
-							Name="dispStatusLine"
-							Style="{DynamicResource Status.Description}"
-							Text="{DynamicResource Import.Statusline.Description}" />
+						Name="dispStatusLine"
+						Style="{DynamicResource Status.Description}"
+						Text="{DynamicResource Import.Statusline.Description}" />
 				</StackPanel>
 			</Grid>
 		</DockPanel>
