--- a/Modelbouwer/View/CountryManagement.xaml
+++ b/Modelbouwer/View/CountryManagement.xaml
@@ -111,7 +111,7 @@
 				Grid.Row="2"
 				Content="{StaticResource Edit.Country.Currency.Label}"
 				Style="{DynamicResource DefaultLabel}" />
-			
+
 			<syncfusion:ComboBoxAdv
 				Grid.Row="2"
 				Grid.Column="1"
@@ -122,7 +122,7 @@
 				SelectedValue="{Binding CountryViewModel.SelectedCountry.CountryCurrencyId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 				SelectedValuePath="CurrencyId"
 				Tag="{StaticResource Edit.Country.Currency.Tag}">
-				
+
 				<!--#region Column definition of the dropdown list-->
 				<syncfusion:ComboBoxAdv.ItemTemplate>
 					<DataTemplate>
@@ -132,25 +132,19 @@
 								<ColumnDefinition Width="35" />
 								<ColumnDefinition Width="*" />
 							</Grid.ColumnDefinitions>
-							<TextBlock
-								Grid.Column="0"
-								Text="{Binding CurrencySymbol}" />
-							<TextBlock
-								Grid.Column="1"
-								Text="{Binding CurrencyCode}" />
-							<TextBlock
-								Grid.Column="2"
-								Text="{Binding CurrencyName}" />
+							<TextBlock Grid.Column="0" Text="{Binding CurrencySymbol}" />
+							<TextBlock Grid.Column="1" Text="{Binding CurrencyCode}" />
+							<TextBlock Grid.Column="2" Text="{Binding CurrencyName}" />
 						</Grid>
 					</DataTemplate>
 				</syncfusion:ComboBoxAdv.ItemTemplate>
 				<!--#endregion-->
-				
+
 				<!--#region Definition of the presentation of the selected item-->
 				<syncfusion:ComboBoxAdv.SelectionBoxTemplate>
 					<DataTemplate>
-						<!-- Only 1 item wil be displayed when item is selected -->
-						<TextBlock Text="{Binding CurrencySymbol}"/>
+						<!--  Only 1 item wil be displayed when item is selected  -->
+						<TextBlock Text="{Binding CurrencySymbol}" />
 					</DataTemplate>
 				</syncfusion:ComboBoxAdv.SelectionBoxTemplate>
 				<!--#endregion-->
