--- a/Modelbouwer/Resources/Styles/ComboBox.xaml
+++ b/Modelbouwer/Resources/Styles/ComboBox.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:local="clr-namespace:Syncfusion.Windows.Tools.Controls;assembly=Syncfusion.Shared.WPF"
-	xmlns:skin="clr-namespace:Syncfusion.Windows.Shared;assembly=Syncfusion.Shared.WPF">
+	xmlns:local="clr-namespace:Syncfusion.Windows.Tools.Controls;assembly=Syncfusion.Shared.WPF">
 
 	<!--#region Default ComboBoxAdv-->
 	<Style TargetType="{x:Type local:ComboBoxAdv}">
