--- a/Modelbouwer/Resources/Styles/TreeView.xaml
+++ b/Modelbouwer/Resources/Styles/TreeView.xaml
@@ -1,7 +1,4 @@
-﻿<ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:syncfusion="http://schemas.syncfusion.com/wpf">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 	<ControlTemplate x:Key="TreeViewControlTemplate">
 		<Border
