--- a/Modelbouwer/View/CurrencyManagement.xaml
+++ b/Modelbouwer/View/CurrencyManagement.xaml
@@ -1,239 +1,243 @@
 ﻿<Page
-    x:Class="Modelbouwer.View.CurrencyManagement"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:helper="clr-namespace:Modelbouwer.Helper"
-    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-    xmlns:local="clr-namespace:Modelbouwer.View"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
-    xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
-    Title="CurrencyManagement"
-    d:DataContext="{d:DesignInstance Type={x:Type viewmodels:CurrencyViewModel}}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    mc:Ignorable="d">
+	x:Class="Modelbouwer.View.CurrencyManagement"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:helper="clr-namespace:Modelbouwer.Helper"
+	xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+	xmlns:local="clr-namespace:Modelbouwer.View"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
+	Title="CurrencyManagement"
+	d:DataContext="{d:DesignInstance Type={x:Type viewmodels:CurrencyViewModel}}"
+	d:DesignHeight="450"
+	d:DesignWidth="800"
+	mc:Ignorable="d">
 
-    <Grid>
-        <!--#region Global grid definition-->
-        <Grid.RowDefinitions>
-            <RowDefinition Height="95" />
-            <RowDefinition Height="132" />
-            <RowDefinition Height="10" />
-            <RowDefinition Height="40" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="20" />
-        </Grid.RowDefinitions>
-        <!--#endregion-->
+	<Grid>
+		<!--#region Global grid definition-->
+		<Grid.RowDefinitions>
+			<RowDefinition Height="95" />
+			<RowDefinition Height="132" />
+			<RowDefinition Height="10" />
+			<RowDefinition Height="40" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="20" />
+		</Grid.RowDefinitions>
+		<!--#endregion-->
 
-        <!--#region Title of the page-->
-        <StackPanel
-            Grid.Row="0"
-            Margin="10,0,10,0"
-            Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
-            <TextBlock Style="{DynamicResource DefaultTitle}" Text="{StaticResource Edit.Currency.Title}" />
-            <Canvas>
-                <Path Style="{DynamicResource DefaultTitleLine}" />
-            </Canvas>
-            <TextBlock Style="{DynamicResource DefaultSubTitle}" Text="{StaticResource Edit.Currency.Subtitle}" />
-        </StackPanel>
-        <!--#endregion-->
+		<!--#region Title of the page-->
+		<StackPanel
+			Grid.Row="0"
+			Margin="10,0,10,0"
+			Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
+			<TextBlock Style="{DynamicResource DefaultTitle}" Text="{StaticResource Edit.Currency.Title}" />
+			<Canvas>
+				<Path Style="{DynamicResource DefaultTitleLine}" />
+			</Canvas>
+			<TextBlock Style="{DynamicResource DefaultSubTitle}" Text="{StaticResource Edit.Currency.Subtitle}" />
+		</StackPanel>
+		<!--#endregion-->
 
-        <!--#region Hidden fields-->
-        <TextBox
-            x:Name="inpId"
-            Grid.Row="2"
-            Style="{DynamicResource HiddenTextBox}"
-            Text="{Binding SelectedCurrency.CurrencyId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-        <!--#endregion-->
+		<!--#region Hidden fields-->
+		<TextBox
+			x:Name="inpId"
+			Grid.Row="2"
+			Style="{DynamicResource HiddenTextBox}"
+			Text="{Binding SelectedCurrency.CurrencyId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+		<!--#endregion-->
 
-        <!--#region Selected Item Card-->
-        <Grid
-            Grid.Row="1"
-            Margin="10,2"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center">
-            <!--#region Grid Card defenition-->
-            <!--#region Row defenition-->
-            <Grid.RowDefinitions>
-                <RowDefinition Height="32" />
-                <RowDefinition Height="32" />
-                <RowDefinition Height="32" />
-                <RowDefinition Height="32" />
-            </Grid.RowDefinitions>
-            <!--#endregion-->
+		<!--#region Selected Item Card-->
+		<Grid
+			Grid.Row="1"
+			Margin="10,2"
+			HorizontalAlignment="Left"
+			VerticalAlignment="Center">
+			<!--#region Grid Card defenition-->
+			<!--#region Row defenition-->
+			<Grid.RowDefinitions>
+				<RowDefinition Height="32" />
+				<RowDefinition Height="32" />
+				<RowDefinition Height="32" />
+				<RowDefinition Height="32" />
+			</Grid.RowDefinitions>
+			<!--#endregion-->
 
-            <!--#region Colomn defenition-->
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="120" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <!--#endregion-->
-            <!--#endregion-->
+			<!--#region Colomn defenition-->
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="120" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
+			<!--#endregion-->
+			<!--#endregion-->
 
-            <!--#region Code-->
-            <Label
-                Grid.Row="0"
-                Content="{StaticResource Edit.Currency.Code.Label}"
-                Style="{DynamicResource DefaultLabel}" />
+			<!--#region Code-->
+			<Label
+				Grid.Row="0"
+				Content="{StaticResource Edit.Currency.Code.Label}"
+				Style="{DynamicResource DefaultLabel}" />
 
-            <TextBox
-                x:Name="inpCurrenyCode"
-                Grid.Row="0"
-                Grid.Column="1"
-                Width="50"
-                CharacterCasing="Upper"
-                MaxLength="4"
-                Style="{DynamicResource DefaultTextBox}"
-                Tag="{StaticResource Edit.Currency.Code.Tag}"
-                Text="{Binding SelectedCurrency.CurrencyCode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                ToolTip="{StaticResource Edit.Currency.Code.Tooltip}" />
-            <!--#endregion-->
+			<TextBox
+				x:Name="inpCurrenyCode"
+				Grid.Row="0"
+				Grid.Column="1"
+				Width="50"
+				CharacterCasing="Upper"
+				MaxLength="4"
+				Style="{DynamicResource DefaultTextBox}"
+				Tag="{StaticResource Edit.Currency.Code.Tag}"
+				Text="{Binding SelectedCurrency.CurrencyCode, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+				ToolTip="{StaticResource Edit.Currency.Code.Tooltip}" />
+			<!--#endregion-->
 
-            <!--#region Name-->
-            <Label
-                Grid.Row="1"
-                Content="{StaticResource Edit.Currency.Name.Label}"
-                Style="{DynamicResource DefaultLabel}" />
+			<!--#region Name-->
+			<Label
+				Grid.Row="1"
+				Content="{StaticResource Edit.Currency.Name.Label}"
+				Style="{DynamicResource DefaultLabel}" />
 
-            <TextBox
-                x:Name="inpCurrencyName"
-                Grid.Row="1"
-                Grid.Column="1"
-                Width="310"
-                MaxLength="45"
-                Style="{DynamicResource DefaultTextBox}"
-                Tag="{StaticResource Edit.Currency.Name.Tag}"
-                Text="{Binding SelectedCurrency.CurrencyName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                ToolTip="{StaticResource Edit.Currency.Name.Tooltip}" />
-            <!--#endregion-->
+			<TextBox
+				x:Name="inpCurrencyName"
+				Grid.Row="1"
+				Grid.Column="1"
+				Width="310"
+				MaxLength="45"
+				Style="{DynamicResource DefaultTextBox}"
+				Tag="{StaticResource Edit.Currency.Name.Tag}"
+				Text="{Binding SelectedCurrency.CurrencyName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+				ToolTip="{StaticResource Edit.Currency.Name.Tooltip}" />
+			<!--#endregion-->
 
-            <!--#region Currency Symbol-->
-            <Label
-                Grid.Row="2"
-                Content="{StaticResource Edit.Currency.Symbol.Label}"
-                Style="{DynamicResource DefaultLabel}" />
+			<!--#region Currency Symbol-->
+			<Label
+				Grid.Row="2"
+				Content="{StaticResource Edit.Currency.Symbol.Label}"
+				Style="{DynamicResource DefaultLabel}" />
 
-            <TextBox
-                x:Name="inpCurrencySymbol"
-                Grid.Row="2"
-                Grid.Column="1"
-                Width="25"
-                MaxLength="2"
-                Style="{DynamicResource DefaultTextBox}"
-                Text="{Binding SelectedCurrency.CurrencySymbol, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                ToolTip="{StaticResource Edit.Currency.Symbol.Tooltip}" />
-            <!--#endregion-->
+			<TextBox
+				x:Name="inpCurrencySymbol"
+				Grid.Row="2"
+				Grid.Column="1"
+				Width="25"
+				MaxLength="2"
+				Style="{DynamicResource DefaultTextBox}"
+				Text="{Binding SelectedCurrency.CurrencySymbol, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+				ToolTip="{StaticResource Edit.Currency.Symbol.Tooltip}" />
+			<!--#endregion-->
 
-            <!--#region Conversion rate-->
-            <Label
-                Grid.Row="3"
-                Content="{StaticResource Edit.Currency.Rate.Label}"
-                Style="{DynamicResource DefaultLabel}" />
+			<!--#region Conversion rate-->
+			<Label
+				Grid.Row="3"
+				Content="{StaticResource Edit.Currency.Rate.Label}"
+				Style="{DynamicResource DefaultLabel}" />
 
-            <syncfusion:DoubleTextBox
-                x:Name="inpCurrencyConversionRate"
-                Grid.Row="3"
-                Grid.Column="1"
-                Width="80"
-                NumberDecimalDigits="4"
-                Style="{DynamicResource SyncfusionDoubleTextBox}"
-                ToolTip="{StaticResource Edit.Currency.Rate.Tooltip}"
-                WatermarkText="{StaticResource Edit.Currency.Rate.Tag}"
-                Value="{Binding SelectedCurrency.CurrencyConversionRate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-            <!--#endregion-->
-        </Grid>
-        <!--#endregion-->
+			<syncfusion:DoubleTextBox
+				x:Name="inpCurrencyConversionRate"
+				Grid.Row="3"
+				Grid.Column="1"
+				Width="80"
+				NumberDecimalDigits="4"
+				Style="{DynamicResource SyncfusionDoubleTextBox}"
+				ToolTip="{StaticResource Edit.Currency.Rate.Tooltip}"
+				WatermarkText="{StaticResource Edit.Currency.Rate.Tag}"
+				Value="{Binding SelectedCurrency.CurrencyConversionRate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+			<!--#endregion-->
+		</Grid>
+		<!--#endregion-->
 
-        <!--#region Action toolbar-->
-        <ToolBarTray
-            Grid.Row="3"
-            Margin="10,2,0,2"
-            Style="{DynamicResource DefaultToolBarTray}">
-            <ToolBar x:Name="generalToolbar" Style="{DynamicResource DefaultToolBar}">
-                <Button Click="ButtonNew" ToolTip="{StaticResource Edit.Country.Action.Tooltip.Add}">
-                    <Image Style="{DynamicResource ToolBarAddIcon}" />
-                </Button>
-                <Button Click="ButtonDelete" ToolTip="{StaticResource Edit.Country.Action.Tooltip.Delete}">
-                    <Image Style="{DynamicResource ToolBarDeleteIcon}" />
-                </Button>
-                <Button Click="ButtonSave" ToolTip="{StaticResource Edit.Country.Action.Tooltip.Save}">
-                    <Image Style="{DynamicResource ToolBarSaveIcon}" />
-                </Button>
-            </ToolBar>
-        </ToolBarTray>
+		<!--#region Action toolbar-->
+		<ToolBarTray
+			Grid.Row="3"
+			Margin="10,2,0,2"
+			Style="{DynamicResource DefaultToolBarTray}">
+			<ToolBar x:Name="generalToolbar" Style="{DynamicResource DefaultToolBar}">
+				<Button Click="ButtonNew" ToolTip="{StaticResource Edit.Currency.Action.Tooltip.Add}">
+					<Image Style="{DynamicResource ToolBarAddIcon}" />
+				</Button>
+				<Button Click="ButtonDelete" ToolTip="{StaticResource Edit.Currency.Action.Tooltip.Delete}">
+					<Image Style="{DynamicResource ToolBarDeleteIcon}" />
+				</Button>
+				<Button Click="ButtonSave" ToolTip="{StaticResource Edit.Currency.Action.Tooltip.Save}">
+					<Image Style="{DynamicResource ToolBarSaveIcon}" />
+				</Button>
+			</ToolBar>
+		</ToolBarTray>
 
-        <!--#endregion-->
+		<!--#endregion-->
 
-        <!--#region Datagrid-->
-        <syncfusion:SfDataGrid
-            x:Name="dataGrid"
-            Grid.Row="4"
-            Margin="10,5"
-            AllowDeleting="False"
-            AllowEditing="False"
-            AllowFiltering="True"
-            AllowGrouping="True"
-            AllowResizingColumns="True"
-            AutoGenerateColumns="False"
-            ItemsSource="{Binding Currency, Mode=TwoWay}"
-            SelectedItem="{Binding SelectedCurrency, Mode=TwoWay}"
-            SortClickAction="DoubleClick">
-            <syncfusion:SfDataGrid.Columns>
-                <syncfusion:GridTextColumn
-                    Width="30" IsHidden="True"
-                    HeaderText="{StaticResource Edit.Currency.DataGrid.Header.Id}"
-                    HorizontalHeaderContentAlignment="Left"
-                    MappingName="CurrencyId" />
-                <syncfusion:GridTextColumn
-                    Width="140"
-                    AllowFiltering="True"
-                    AllowSorting="True"
-                    HeaderText="{StaticResource Edit.Currency.DataGrid.Header.Code}"
-                    HorizontalHeaderContentAlignment="Left"
-                    MappingName="CurrencyCode" />
-                <syncfusion:GridTextColumn
-                    Width="450"
-                    AllowFiltering="True"
-                    AllowSorting="True"
-                    HeaderText="{StaticResource Edit.Currency.DataGrid.Header.Name}"
-                    HorizontalHeaderContentAlignment="Left"
-                    MappingName="CurrencyName" />
-                <syncfusion:GridTextColumn
-                    Width="90"
-                    AllowFiltering="True"
-                    AllowSorting="True"
-                    HeaderText="{StaticResource Edit.Currency.DataGrid.Header.CurrencySymbol}"
-                    HorizontalHeaderContentAlignment="Left"
-                    MappingName="CurrencySymbol" />
-                <syncfusion:GridNumericColumn
-                    Width="90" HorizontalHeaderContentAlignment="Right" TextAlignment="Right"
-                    HeaderText="{StaticResource Edit.Currency.DataGrid.Header.ConversionRate}"
-                    MappingName="CurrencyConversionRate"
-                    AllowFiltering="False" NumberDecimalDigits="4" />
-            </syncfusion:SfDataGrid.Columns>
-        </syncfusion:SfDataGrid>
-        <!--#endregion-->
+		<!--#region Datagrid-->
+		<syncfusion:SfDataGrid
+			x:Name="dataGrid"
+			Grid.Row="4"
+			Margin="10,5"
+			AllowDeleting="False"
+			AllowEditing="False"
+			AllowFiltering="True"
+			AllowGrouping="True"
+			AllowResizingColumns="True"
+			AutoGenerateColumns="False"
+			ItemsSource="{Binding Currency, Mode=TwoWay}"
+			SelectedItem="{Binding SelectedCurrency, Mode=TwoWay}"
+			SortClickAction="DoubleClick">
+			<syncfusion:SfDataGrid.Columns>
+				<syncfusion:GridTextColumn
+					Width="30"
+					HeaderText="{StaticResource Edit.Currency.DataGrid.Header.Id}"
+					HorizontalHeaderContentAlignment="Left"
+					IsHidden="True"
+					MappingName="CurrencyId" />
+				<syncfusion:GridTextColumn
+					Width="140"
+					AllowFiltering="True"
+					AllowSorting="True"
+					HeaderText="{StaticResource Edit.Currency.DataGrid.Header.Code}"
+					HorizontalHeaderContentAlignment="Left"
+					MappingName="CurrencyCode" />
+				<syncfusion:GridTextColumn
+					Width="450"
+					AllowFiltering="True"
+					AllowSorting="True"
+					HeaderText="{StaticResource Edit.Currency.DataGrid.Header.Name}"
+					HorizontalHeaderContentAlignment="Left"
+					MappingName="CurrencyName" />
+				<syncfusion:GridTextColumn
+					Width="90"
+					AllowFiltering="True"
+					AllowSorting="True"
+					HeaderText="{StaticResource Edit.Currency.DataGrid.Header.CurrencySymbol}"
+					HorizontalHeaderContentAlignment="Left"
+					MappingName="CurrencySymbol" />
+				<syncfusion:GridNumericColumn
+					Width="90"
+					AllowFiltering="False"
+					HeaderText="{StaticResource Edit.Currency.DataGrid.Header.ConversionRate}"
+					HorizontalHeaderContentAlignment="Right"
+					MappingName="CurrencyConversionRate"
+					NumberDecimalDigits="4"
+					TextAlignment="Right" />
+			</syncfusion:SfDataGrid.Columns>
+		</syncfusion:SfDataGrid>
+		<!--#endregion-->
 
-        <!--#region Statusbar-->
-        <DockPanel
-            Grid.Row="5"
-            Height="30"
-            Margin="10,0,10,0"
-            VerticalAlignment="Center"
-            Background="LightGray">
-            <Grid>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Import.Statusline.Text}" />
-                    <TextBlock
-                        x:Name="dispStatusLine"
-                        Style="{DynamicResource Status.Description}"
-                        Text="{DynamicResource Import.Statusline.Description}" />
-                </StackPanel>
-            </Grid>
-        </DockPanel>
-        <!--#endregion-->
+		<!--#region Statusbar-->
+		<DockPanel
+			Grid.Row="5"
+			Height="30"
+			Margin="10,0,10,0"
+			VerticalAlignment="Center"
+			Background="LightGray">
+			<Grid>
+				<StackPanel Orientation="Horizontal">
+					<TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Import.Statusline.Text}" />
+					<TextBlock
+						x:Name="dispStatusLine"
+						Style="{DynamicResource Status.Description}"
+						Text="{DynamicResource Import.Statusline.Description}" />
+				</StackPanel>
+			</Grid>
+		</DockPanel>
+		<!--#endregion-->
 
-    </Grid>
+	</Grid>
 </Page>
