Implemented SupplierContactType maintenance page close #5

--- a/Modelbouwer/MainWindow.xaml
+++ b/Modelbouwer/MainWindow.xaml
@@ -827,7 +827,7 @@
 					<!--#endregion-->
 					<!--#endregion-->
 
-					<!--#region Functios for Contacts per Supplier-->
+					<!--#region Functions for Contacts per Supplier-->
 					<!--#region SupplierContactTypeegistration button-->
 					<syncfusion:RibbonButton
 						Width="70"
